# TNCG15

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
inc/: Camera.h  Color.h  Polygon.h  Ray.h  Scene.h  Triangle.h
src/: Polygon.cpp  Scene.cpp  Triangle.cpp  main.cpp
